part1/ex1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-svc
spec:
  type: ClusterIP
  selector:
    app: main
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8083
